fix(catlinks): adjust siteNotice z-index to 1

--- a/src/SiteCommon_SpecialInterface/modules/catlinks.less
+++ b/src/SiteCommon_SpecialInterface/modules/catlinks.less
@@ -2,5 +2,5 @@
 	z-index: 0;
 }
 #siteNotice {
-	z-index: 0;
+	z-index: 1;
 }
